parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> alll
Rule 1     alll -> all
Rule 2     all -> limit
Rule 3     all -> integral
Rule 4     all -> fraction
Rule 5     all -> root
Rule 6     all -> monomiall y
Rule 7     all -> NUM
Rule 8     all -> MON
Rule 9     all -> FUNCION
Rule 10    all -> REDI all x
Rule 11    x -> OPERBI all x
Rule 12    x -> REDD y
Rule 13    y -> exp
Rule 14    y -> <empty>
Rule 15    exp -> SUP LLAVI all LLAVD
Rule 16    monomiall -> monomial monomiall
Rule 17    monomiall -> monomial
Rule 18    monomial -> MON NUM
Rule 19    monomial -> NUM MON
Rule 20    fraction -> FRAC LLAVI all LLAVD LLAVI all LLAVD
Rule 21    root -> RAIZ LLAVI all LLAVD
Rule 22    integral -> INT all DIF MON
Rule 23    integral -> INT SUB LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON
Rule 24    integral -> SUM SUB LLAVI all LLAVD SUP LLAVI all LLAVD all
Rule 25    limit -> LIMIT SUB LLAVI MON TO INFINITY LLAVD all
Rule 26    limit -> LIMIT SUB LLAVI MON TO MON LLAVD all
Rule 27    limit -> LIMIT SUB LLAVI MON TO NUM LLAVD all

Terminals, with rules where they appear

DIF                  : 22 23
FRAC                 : 20
FUNCION              : 9
INFINITY             : 25
INT                  : 22 23
LIMIT                : 25 26 27
LLAVD                : 15 20 20 21 23 23 24 24 25 26 27
LLAVI                : 15 20 20 21 23 23 24 24 25 26 27
MON                  : 8 18 19 22 23 25 26 26 27
NUM                  : 7 18 19 27
OPERBI               : 11
RAIZ                 : 21
REDD                 : 12
REDI                 : 10
SUB                  : 23 24 25 26 27
SUM                  : 24
SUP                  : 15 23 24
TO                   : 25 26 27
error                : 

Nonterminals, with rules where they appear

all                  : 1 10 11 15 20 20 21 22 23 23 23 24 24 24 25 26 27
alll                 : 0
exp                  : 13
fraction             : 4
integral             : 3
limit                : 2
monomial             : 16 17
monomiall            : 6 16
root                 : 5
x                    : 10 11
y                    : 6 12

Parsing method: LALR

state 0

    (0) S' -> . alll
    (1) alll -> . all
    (2) all -> . limit
    (3) all -> . integral
    (4) all -> . fraction
    (5) all -> . root
    (6) all -> . monomiall y
    (7) all -> . NUM
    (8) all -> . MON
    (9) all -> . FUNCION
    (10) all -> . REDI all x
    (25) limit -> . LIMIT SUB LLAVI MON TO INFINITY LLAVD all
    (26) limit -> . LIMIT SUB LLAVI MON TO MON LLAVD all
    (27) limit -> . LIMIT SUB LLAVI MON TO NUM LLAVD all
    (22) integral -> . INT all DIF MON
    (23) integral -> . INT SUB LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON
    (24) integral -> . SUM SUB LLAVI all LLAVD SUP LLAVI all LLAVD all
    (20) fraction -> . FRAC LLAVI all LLAVD LLAVI all LLAVD
    (21) root -> . RAIZ LLAVI all LLAVD
    (16) monomiall -> . monomial monomiall
    (17) monomiall -> . monomial
    (18) monomial -> . MON NUM
    (19) monomial -> . NUM MON

    NUM             shift and go to state 8
    MON             shift and go to state 9
    FUNCION         shift and go to state 10
    REDI            shift and go to state 11
    LIMIT           shift and go to state 12
    INT             shift and go to state 13
    SUM             shift and go to state 14
    FRAC            shift and go to state 15
    RAIZ            shift and go to state 16

    alll                           shift and go to state 1
    all                            shift and go to state 2
    limit                          shift and go to state 3
    integral                       shift and go to state 4
    fraction                       shift and go to state 5
    root                           shift and go to state 6
    monomiall                      shift and go to state 7
    monomial                       shift and go to state 17

state 1

    (0) S' -> alll .



state 2

    (1) alll -> all .

    $end            reduce using rule 1 (alll -> all .)


state 3

    (2) all -> limit .

    $end            reduce using rule 2 (all -> limit .)
    OPERBI          reduce using rule 2 (all -> limit .)
    REDD            reduce using rule 2 (all -> limit .)
    DIF             reduce using rule 2 (all -> limit .)
    LLAVD           reduce using rule 2 (all -> limit .)


state 4

    (3) all -> integral .

    $end            reduce using rule 3 (all -> integral .)
    OPERBI          reduce using rule 3 (all -> integral .)
    REDD            reduce using rule 3 (all -> integral .)
    DIF             reduce using rule 3 (all -> integral .)
    LLAVD           reduce using rule 3 (all -> integral .)


state 5

    (4) all -> fraction .

    $end            reduce using rule 4 (all -> fraction .)
    OPERBI          reduce using rule 4 (all -> fraction .)
    REDD            reduce using rule 4 (all -> fraction .)
    DIF             reduce using rule 4 (all -> fraction .)
    LLAVD           reduce using rule 4 (all -> fraction .)


state 6

    (5) all -> root .

    $end            reduce using rule 5 (all -> root .)
    OPERBI          reduce using rule 5 (all -> root .)
    REDD            reduce using rule 5 (all -> root .)
    DIF             reduce using rule 5 (all -> root .)
    LLAVD           reduce using rule 5 (all -> root .)


state 7

    (6) all -> monomiall . y
    (13) y -> . exp
    (14) y -> .
    (15) exp -> . SUP LLAVI all LLAVD

    $end            reduce using rule 14 (y -> .)
    OPERBI          reduce using rule 14 (y -> .)
    REDD            reduce using rule 14 (y -> .)
    DIF             reduce using rule 14 (y -> .)
    LLAVD           reduce using rule 14 (y -> .)
    SUP             shift and go to state 20

    y                              shift and go to state 18
    exp                            shift and go to state 19

state 8

    (7) all -> NUM .
    (19) monomial -> NUM . MON

    $end            reduce using rule 7 (all -> NUM .)
    OPERBI          reduce using rule 7 (all -> NUM .)
    REDD            reduce using rule 7 (all -> NUM .)
    DIF             reduce using rule 7 (all -> NUM .)
    LLAVD           reduce using rule 7 (all -> NUM .)
    MON             shift and go to state 21


state 9

    (8) all -> MON .
    (18) monomial -> MON . NUM

    $end            reduce using rule 8 (all -> MON .)
    OPERBI          reduce using rule 8 (all -> MON .)
    REDD            reduce using rule 8 (all -> MON .)
    DIF             reduce using rule 8 (all -> MON .)
    LLAVD           reduce using rule 8 (all -> MON .)
    NUM             shift and go to state 22


state 10

    (9) all -> FUNCION .

    $end            reduce using rule 9 (all -> FUNCION .)
    OPERBI          reduce using rule 9 (all -> FUNCION .)
    REDD            reduce using rule 9 (all -> FUNCION .)
    DIF             reduce using rule 9 (all -> FUNCION .)
    LLAVD           reduce using rule 9 (all -> FUNCION .)


state 11

    (10) all -> REDI . all x
    (2) all -> . limit
    (3) all -> . integral
    (4) all -> . fraction
    (5) all -> . root
    (6) all -> . monomiall y
    (7) all -> . NUM
    (8) all -> . MON
    (9) all -> . FUNCION
    (10) all -> . REDI all x
    (25) limit -> . LIMIT SUB LLAVI MON TO INFINITY LLAVD all
    (26) limit -> . LIMIT SUB LLAVI MON TO MON LLAVD all
    (27) limit -> . LIMIT SUB LLAVI MON TO NUM LLAVD all
    (22) integral -> . INT all DIF MON
    (23) integral -> . INT SUB LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON
    (24) integral -> . SUM SUB LLAVI all LLAVD SUP LLAVI all LLAVD all
    (20) fraction -> . FRAC LLAVI all LLAVD LLAVI all LLAVD
    (21) root -> . RAIZ LLAVI all LLAVD
    (16) monomiall -> . monomial monomiall
    (17) monomiall -> . monomial
    (18) monomial -> . MON NUM
    (19) monomial -> . NUM MON

    NUM             shift and go to state 8
    MON             shift and go to state 9
    FUNCION         shift and go to state 10
    REDI            shift and go to state 11
    LIMIT           shift and go to state 12
    INT             shift and go to state 13
    SUM             shift and go to state 14
    FRAC            shift and go to state 15
    RAIZ            shift and go to state 16

    all                            shift and go to state 23
    limit                          shift and go to state 3
    integral                       shift and go to state 4
    fraction                       shift and go to state 5
    root                           shift and go to state 6
    monomiall                      shift and go to state 7
    monomial                       shift and go to state 17

state 12

    (25) limit -> LIMIT . SUB LLAVI MON TO INFINITY LLAVD all
    (26) limit -> LIMIT . SUB LLAVI MON TO MON LLAVD all
    (27) limit -> LIMIT . SUB LLAVI MON TO NUM LLAVD all

    SUB             shift and go to state 24


state 13

    (22) integral -> INT . all DIF MON
    (23) integral -> INT . SUB LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON
    (2) all -> . limit
    (3) all -> . integral
    (4) all -> . fraction
    (5) all -> . root
    (6) all -> . monomiall y
    (7) all -> . NUM
    (8) all -> . MON
    (9) all -> . FUNCION
    (10) all -> . REDI all x
    (25) limit -> . LIMIT SUB LLAVI MON TO INFINITY LLAVD all
    (26) limit -> . LIMIT SUB LLAVI MON TO MON LLAVD all
    (27) limit -> . LIMIT SUB LLAVI MON TO NUM LLAVD all
    (22) integral -> . INT all DIF MON
    (23) integral -> . INT SUB LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON
    (24) integral -> . SUM SUB LLAVI all LLAVD SUP LLAVI all LLAVD all
    (20) fraction -> . FRAC LLAVI all LLAVD LLAVI all LLAVD
    (21) root -> . RAIZ LLAVI all LLAVD
    (16) monomiall -> . monomial monomiall
    (17) monomiall -> . monomial
    (18) monomial -> . MON NUM
    (19) monomial -> . NUM MON

    SUB             shift and go to state 26
    NUM             shift and go to state 8
    MON             shift and go to state 9
    FUNCION         shift and go to state 10
    REDI            shift and go to state 11
    LIMIT           shift and go to state 12
    INT             shift and go to state 13
    SUM             shift and go to state 14
    FRAC            shift and go to state 15
    RAIZ            shift and go to state 16

    all                            shift and go to state 25
    limit                          shift and go to state 3
    integral                       shift and go to state 4
    fraction                       shift and go to state 5
    root                           shift and go to state 6
    monomiall                      shift and go to state 7
    monomial                       shift and go to state 17

state 14

    (24) integral -> SUM . SUB LLAVI all LLAVD SUP LLAVI all LLAVD all

    SUB             shift and go to state 27


state 15

    (20) fraction -> FRAC . LLAVI all LLAVD LLAVI all LLAVD

    LLAVI           shift and go to state 28


state 16

    (21) root -> RAIZ . LLAVI all LLAVD

    LLAVI           shift and go to state 29


state 17

    (16) monomiall -> monomial . monomiall
    (17) monomiall -> monomial .
    (16) monomiall -> . monomial monomiall
    (17) monomiall -> . monomial
    (18) monomial -> . MON NUM
    (19) monomial -> . NUM MON

    SUP             reduce using rule 17 (monomiall -> monomial .)
    $end            reduce using rule 17 (monomiall -> monomial .)
    OPERBI          reduce using rule 17 (monomiall -> monomial .)
    REDD            reduce using rule 17 (monomiall -> monomial .)
    DIF             reduce using rule 17 (monomiall -> monomial .)
    LLAVD           reduce using rule 17 (monomiall -> monomial .)
    MON             shift and go to state 31
    NUM             shift and go to state 32

    monomial                       shift and go to state 17
    monomiall                      shift and go to state 30

state 18

    (6) all -> monomiall y .

    $end            reduce using rule 6 (all -> monomiall y .)
    OPERBI          reduce using rule 6 (all -> monomiall y .)
    REDD            reduce using rule 6 (all -> monomiall y .)
    DIF             reduce using rule 6 (all -> monomiall y .)
    LLAVD           reduce using rule 6 (all -> monomiall y .)


state 19

    (13) y -> exp .

    $end            reduce using rule 13 (y -> exp .)
    OPERBI          reduce using rule 13 (y -> exp .)
    REDD            reduce using rule 13 (y -> exp .)
    DIF             reduce using rule 13 (y -> exp .)
    LLAVD           reduce using rule 13 (y -> exp .)


state 20

    (15) exp -> SUP . LLAVI all LLAVD

    LLAVI           shift and go to state 33


state 21

    (19) monomial -> NUM MON .

    MON             reduce using rule 19 (monomial -> NUM MON .)
    NUM             reduce using rule 19 (monomial -> NUM MON .)
    SUP             reduce using rule 19 (monomial -> NUM MON .)
    $end            reduce using rule 19 (monomial -> NUM MON .)
    OPERBI          reduce using rule 19 (monomial -> NUM MON .)
    REDD            reduce using rule 19 (monomial -> NUM MON .)
    DIF             reduce using rule 19 (monomial -> NUM MON .)
    LLAVD           reduce using rule 19 (monomial -> NUM MON .)


state 22

    (18) monomial -> MON NUM .

    MON             reduce using rule 18 (monomial -> MON NUM .)
    NUM             reduce using rule 18 (monomial -> MON NUM .)
    SUP             reduce using rule 18 (monomial -> MON NUM .)
    $end            reduce using rule 18 (monomial -> MON NUM .)
    OPERBI          reduce using rule 18 (monomial -> MON NUM .)
    REDD            reduce using rule 18 (monomial -> MON NUM .)
    DIF             reduce using rule 18 (monomial -> MON NUM .)
    LLAVD           reduce using rule 18 (monomial -> MON NUM .)


state 23

    (10) all -> REDI all . x
    (11) x -> . OPERBI all x
    (12) x -> . REDD y

    OPERBI          shift and go to state 35
    REDD            shift and go to state 36

    x                              shift and go to state 34

state 24

    (25) limit -> LIMIT SUB . LLAVI MON TO INFINITY LLAVD all
    (26) limit -> LIMIT SUB . LLAVI MON TO MON LLAVD all
    (27) limit -> LIMIT SUB . LLAVI MON TO NUM LLAVD all

    LLAVI           shift and go to state 37


state 25

    (22) integral -> INT all . DIF MON

    DIF             shift and go to state 38


state 26

    (23) integral -> INT SUB . LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON

    LLAVI           shift and go to state 39


state 27

    (24) integral -> SUM SUB . LLAVI all LLAVD SUP LLAVI all LLAVD all

    LLAVI           shift and go to state 40


state 28

    (20) fraction -> FRAC LLAVI . all LLAVD LLAVI all LLAVD
    (2) all -> . limit
    (3) all -> . integral
    (4) all -> . fraction
    (5) all -> . root
    (6) all -> . monomiall y
    (7) all -> . NUM
    (8) all -> . MON
    (9) all -> . FUNCION
    (10) all -> . REDI all x
    (25) limit -> . LIMIT SUB LLAVI MON TO INFINITY LLAVD all
    (26) limit -> . LIMIT SUB LLAVI MON TO MON LLAVD all
    (27) limit -> . LIMIT SUB LLAVI MON TO NUM LLAVD all
    (22) integral -> . INT all DIF MON
    (23) integral -> . INT SUB LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON
    (24) integral -> . SUM SUB LLAVI all LLAVD SUP LLAVI all LLAVD all
    (20) fraction -> . FRAC LLAVI all LLAVD LLAVI all LLAVD
    (21) root -> . RAIZ LLAVI all LLAVD
    (16) monomiall -> . monomial monomiall
    (17) monomiall -> . monomial
    (18) monomial -> . MON NUM
    (19) monomial -> . NUM MON

    NUM             shift and go to state 8
    MON             shift and go to state 9
    FUNCION         shift and go to state 10
    REDI            shift and go to state 11
    LIMIT           shift and go to state 12
    INT             shift and go to state 13
    SUM             shift and go to state 14
    FRAC            shift and go to state 15
    RAIZ            shift and go to state 16

    all                            shift and go to state 41
    limit                          shift and go to state 3
    integral                       shift and go to state 4
    fraction                       shift and go to state 5
    root                           shift and go to state 6
    monomiall                      shift and go to state 7
    monomial                       shift and go to state 17

state 29

    (21) root -> RAIZ LLAVI . all LLAVD
    (2) all -> . limit
    (3) all -> . integral
    (4) all -> . fraction
    (5) all -> . root
    (6) all -> . monomiall y
    (7) all -> . NUM
    (8) all -> . MON
    (9) all -> . FUNCION
    (10) all -> . REDI all x
    (25) limit -> . LIMIT SUB LLAVI MON TO INFINITY LLAVD all
    (26) limit -> . LIMIT SUB LLAVI MON TO MON LLAVD all
    (27) limit -> . LIMIT SUB LLAVI MON TO NUM LLAVD all
    (22) integral -> . INT all DIF MON
    (23) integral -> . INT SUB LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON
    (24) integral -> . SUM SUB LLAVI all LLAVD SUP LLAVI all LLAVD all
    (20) fraction -> . FRAC LLAVI all LLAVD LLAVI all LLAVD
    (21) root -> . RAIZ LLAVI all LLAVD
    (16) monomiall -> . monomial monomiall
    (17) monomiall -> . monomial
    (18) monomial -> . MON NUM
    (19) monomial -> . NUM MON

    NUM             shift and go to state 8
    MON             shift and go to state 9
    FUNCION         shift and go to state 10
    REDI            shift and go to state 11
    LIMIT           shift and go to state 12
    INT             shift and go to state 13
    SUM             shift and go to state 14
    FRAC            shift and go to state 15
    RAIZ            shift and go to state 16

    all                            shift and go to state 42
    limit                          shift and go to state 3
    integral                       shift and go to state 4
    fraction                       shift and go to state 5
    root                           shift and go to state 6
    monomiall                      shift and go to state 7
    monomial                       shift and go to state 17

state 30

    (16) monomiall -> monomial monomiall .

    SUP             reduce using rule 16 (monomiall -> monomial monomiall .)
    $end            reduce using rule 16 (monomiall -> monomial monomiall .)
    OPERBI          reduce using rule 16 (monomiall -> monomial monomiall .)
    REDD            reduce using rule 16 (monomiall -> monomial monomiall .)
    DIF             reduce using rule 16 (monomiall -> monomial monomiall .)
    LLAVD           reduce using rule 16 (monomiall -> monomial monomiall .)


state 31

    (18) monomial -> MON . NUM

    NUM             shift and go to state 22


state 32

    (19) monomial -> NUM . MON

    MON             shift and go to state 21


state 33

    (15) exp -> SUP LLAVI . all LLAVD
    (2) all -> . limit
    (3) all -> . integral
    (4) all -> . fraction
    (5) all -> . root
    (6) all -> . monomiall y
    (7) all -> . NUM
    (8) all -> . MON
    (9) all -> . FUNCION
    (10) all -> . REDI all x
    (25) limit -> . LIMIT SUB LLAVI MON TO INFINITY LLAVD all
    (26) limit -> . LIMIT SUB LLAVI MON TO MON LLAVD all
    (27) limit -> . LIMIT SUB LLAVI MON TO NUM LLAVD all
    (22) integral -> . INT all DIF MON
    (23) integral -> . INT SUB LLAVI all LLAVD SUP LLAVI all LLAVD all DIF MON
    (24) integral -> . SUM SUB LLAVI all LLAVD SUP LLAVI all LLAVD all
    (20) fraction -> . FRAC LLAVI all LLAVD LLAVI all LLAVD
    (21) root -> . RAIZ LLAVI all LLAVD
    (16) monomiall -> . monomial monomiall
    (17) monomiall -> . monomial
    (18) monomial -> . MON NUM
    (19) monomial -> . NUM MON

    NUM             shift and go to state 8
    MON             shift and go to state 9
    FUNCION         shift and go to state 10
    REDI            shift and go to state 11
    LIMIT           shift and go to state 12
    INT             shift and go to state 13
    SUM             shift and go to state 14
    FRAC            shift and go to state 15
    RAIZ            shift and go to state 16

    all                            shift and go to state 43
    limit                          shift and go to state 3
    integral                       shift and go to state 4
    fraction                       shift and go to state 5
    root                           shift and go to state 6
    monomiall                      shift and go to state 7
    monomial                       shift and go to state 17

state 34

    (10) all -> REDI all x .

    $end            reduce using rule 10 (all -> REDI all x .)
    OPERBI          reduce using rule 10 (all -> REDI all x .)
    REDD            reduce using rule 10 (all -> REDI all x .)
    DIF             reduce using rule 10 (all -> REDI all x .)
    LLAVD           reduce using rule 10 (all -> REDI all x .)


state 35
